Bug #30651	Problems with thread_handling system variable

Changed thread_handling variable to a global only, read only variable, as it is currently used.